--- a/demos/jquery.html
+++ b/demos/jquery.html
@@ -43,7 +43,7 @@
       </ul>
       <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/cojapacze/sketchpad"><i class="fa fa-github" aria-hidden="true"></i> Code on GitHub</a></a>
+          <a class="nav-link" href="https://github.com/Anurag30112003/sketchpad"><i class="fa fa-github" aria-hidden="true"></i> Code on GitHub</a></a>
         </li>
       </ul>
     </nav>
@@ -120,33 +120,21 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
     </div>
-
-    <div class="bg-inverse text-white mt-3 mb-3 pt-3 pb-3 font-weight-lighter">
+<div class="bg-inverse text-white mt-3 mb-3 pt-3 pb-3 font-weight-lighter">
   <div class="container text-left">
     <div class="row">
       <div class="col-4">
         <h4>Sketchpad.pro</h4>
         <hr class="bg-faded"/>
-        <p>Sketchpad.pro is Open Source and fully customisable drawing library written in JavaScript.</p>
+        <p>Sketchpad.pro is made with html css js.</p>
       </div>
-      <div class="col-4">
-        <h4>Documentation</h4>
-        <hr class="bg-faded"/>
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link" href="https://developers.sketchpad.pro/docs/client/sketchpad/0.5.1"><i class="fa fa-desktop" aria-hidden="true"></i> Client</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://developers.sketchpad.pro/docs/server/sketchpad/0.5.1"><i class="fa fa-server" aria-hidden="true"></i> Server</a>
-          </li>
-        </ul>
-      </div>
+      
       <div class="col-4">
         <h4>Subscribe</h4>
         <hr class="bg-faded"/>
         <form method="post" action="https://app.freshmail.com/pl/actions/subscribe/">
           <input type="hidden" name="subscribers_list_hash" value="lsl8zksfn0" />
-          <input type="text" id="freshmail_email" name="freshmail_email" placeholder="your@email.com" />
+          <input type="text" id="freshmail_email" name="freshmail_email" placeholder="anuragsharma011011@gmail.com" />
           <input type="submit"/>
         </form>
       </div>
@@ -155,9 +143,7 @@
   </div>
   <div class="container text-center mt-3">
     <p class="text-right"><a href="#">Back to top <i class="fa fa-arrow-circle-o-up" aria-hidden="true"></i></a></p>
-    <div class="row">
-      <div class="col-12">Sketchpad.pro &copy; <a href="http://positivestudio.co">positivestudio.co</a> | <a href="https://draw.chat">draw online</a></div>
-    </div>
+    
   </div>
 </div>
 
