--- a/demos/autoplay.html
+++ b/demos/autoplay.html
@@ -7,7 +7,7 @@
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="Sketchpad.pro is using 'slices of time' as inputs history to store events. You can simulate hand drawing process by replaying stored input history.">
       <meta name="keywords" content="drawing board sketch pad online whiteboard canvas">
-      <meta name="author" content="Positive Studio">
+      <meta name="author" content="Anurag">
       <link rel="icon" href="favicon.ico">
 
       <title>Autoplay | sketchpad.pro - free online drawing board</title>
