--- a/demos/custom-tools.html
+++ b/demos/custom-tools.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="You can make own custom brushes for Sketchpad.pro. This example shows how to create bubble brush relayed on mouse cursor speed.">
-      <meta name="author" content="Positive Studio">
+      <meta name="author" content="Anurag">
       <link rel="icon" href="favicon.ico">
 
       <title>Custom Tools Plugins | sketchpad.pro - free online drawing board</title>
