--- a/demos/jquery.html
+++ b/demos/jquery.html
@@ -7,7 +7,7 @@
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="Sketchpad works as a plugin for jQuery. You can simply turn any div element into live whiteboard using few lines of javascript code and jQuery.">
       <meta name="keywords" content="drawing board sketch pad online whiteboard canvas">
-      <meta name="author" content="Positive Studio">
+      <meta name="author" content="Anurag">
       <link rel="icon" href="favicon.ico">
 
       <title>jQuery | sketchpad.pro - free online drawing board</title>
