--- a/demos/picture.html
+++ b/demos/picture.html
@@ -7,7 +7,7 @@
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="Sketchpad allows you to define background and foreground image of the canvas. This example show how to use sketchpad for coloring scene made from photos.">
       <meta name="keywords" content="drawing board sketch pad online whiteboard canvas">
-      <meta name="author" content="Positive Studio">
+      <meta name="author" content="Anurag">
       <link rel="icon" href="favicon.ico">
 
       <title>Draw on picture | sketchpad.pro - free online drawing board</title>
