--- a/demos/simple.html
+++ b/demos/simple.html
@@ -7,7 +7,7 @@
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="A simple example of sketchpad drawing board plugin. You can draw on the canvas using mouse, finger or stylus. Use the color palette to change the color of pen ink, the slider to adjust brush size and the eraser to remove your sketches.">
       <meta name="keywords" content="drawing board sketch pad online whiteboard canvas">
-      <meta name="author" content="Positive Studio">
+      <meta name="author" content="Anurag">
       <link rel="icon" href="favicon.ico">
 
       <title>Simple | sketchpad.pro - free online drawing board</title>
