--- a/demos/online.html
+++ b/demos/online.html
@@ -7,7 +7,7 @@
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta name="description" content="Sketchpad.pro allows co-operating multiple users in real-time using WebSocket server. This example shows how to setup and test own sketchpad server.">
       <meta name="keywords" content="drawing board sketch pad online whiteboard canvas">
-      <meta name="author" content="Positive Studio">
+      <meta name="author" content="Anurag">
       <link rel="icon" href="favicon.ico">
 
       <title>Online | sketchpad.pro - free online drawing board</title>
